# Pytorch-Sentiment-analysis

./: README.md  app.py  flask.py  pyproject.toml  requirements.in  requirements.txt
training/: SentimentLSTM.py  Training.ipynb  preprocess.py
training/models/: model_config.json  vocab.pkl
