[project]
name = "pytorch-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "en-core-web-sm",
    "numpy==1.26.4",
    "spacy==3.7.4",
    "streamlit==1.28.2",
    "torch==2.2.2",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }
